<resources>
    <string name="setup_wizard_next_button_label">Next</string>
    <string name="setup_wizard_back_button_label">Back</string>
    <string name="additional_system_update">com.panasonic.sanyo.ts.firmwareupdate</string>
    <string name="additional_system_update_menu">com.panasonic.sanyo.ts.firmwareupdate.FirmwareUpdateActivity</string>
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="device_info_default">Unknown</string>
    <string name="show_dev_on">You are now a developer!</string>
    <string name="show_dev_already">No need, you are already a developer.</string>
    <string name="header_category_wireless_networks">Wireless &amp; networks</string>
    <string name="header_category_connections">Connections</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_personal">Personal</string>
    <string name="header_category_access">Access</string>
    <string name="header_category_system">System</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="volte_provisioned_flag_on">Turn on VoLTE provisioned flag</string>
    <string name="volte_provisioned_flag_off">Turn off VoLTE provisioned flag</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount External storage</string>
    <string name="sdcard_format">Erase External storage</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">Charging on AC</string>
    <string name="battery_info_status_charging_usb">Charging over USB</string>
    <string name="battery_info_status_charging_wireless">Charging wirelessly</string>
    <string name="battery_info_status_discharging">Not charging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_wireless">wireless</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="battery_info_health_cold">Cold</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_is_discoverable">Visible to all nearby Bluetooth devices (%1$s)</string>
    <string name="bluetooth_is_discoverable_always">Visible to all nearby Bluetooth devices</string>
    <string name="bluetooth_not_visible_to_other_devices">Not visible to other Bluetooth devices</string>
    <string name="bluetooth_only_visible_to_paired_devices">Only visible to paired devices</string>
    <string name="bluetooth_visibility_timeout">Visibility timeout</string>
    <string name="bluetooth_lock_voice_dialing">Lock voice dialing</string>
    <string name="bluetooth_lock_voice_dialing_summary">Prevent use of the bluetooth dialer when the screen is locked</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_device_details">Device settings</string>
    <string name="bluetooth_profile_details">Profile settings</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan for devices</string>
    <string name="bluetooth_rename_device">Rename this device</string>
    <string name="bluetooth_rename_button">Rename</string>
    <string name="bluetooth_disconnect_title">Disconnect?</string>
    <string name="bluetooth_disconnect_all_profiles">This will end your connection with:&lt;br&gt;&lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="bluetooth_empty_list_user_restricted">You don\'t have permission to change Bluetooth settings.</string>
    <string name="bluetooth_is_visible_message">%1$s is visible to nearby devices while Bluetooth settings is open.</string>
    <string name="bluetooth_is_disconnect_question">Disconnect %1$s?</string>
    <string name="bluetooth_broadcasting">Broadcasting</string>
    <string name="bluetooth_disable_profile_title">Disable profile?</string>
    <string name="bluetooth_disable_profile_message">This will disable:&lt;br&gt;&lt;b&gt;%1$s&lt;/b&gt;&lt;br&gt;&lt;br&gt;From:&lt;br&gt;&lt;b&gt;%2$s&lt;/b&gt;</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)</string>
    <string name="bluetooth_connected_no_map">Connected (no message access)</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_unknown" />
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_device">Unnamed Bluetooth device</string>
    <string name="progress_scanning">Searching</string>
    <string name="bluetooth_no_devices_found">No nearby Bluetooth devices were found.</string>
    <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
    <string name="bluetooth_notif_title">Pairing request</string>
    <string name="bluetooth_notif_message">Touch to pair with %1$s.</string>
    <string name="bluetooth_show_received_files">Show received files</string>
    <string name="device_picker">Choose Bluetooth device</string>
    <string name="bluetooth_permission_request">Bluetooth permission request</string>
    <string name="bluetooth_ask_enablement">An app wants to turn on Bluetooth.</string>
    <string name="bluetooth_ask_discovery">An app wants to make your tablet visible to other Bluetooth devices for %1$d seconds.</string>
    <string name="bluetooth_ask_lasting_discovery">An app wants to make your tablet visible to other Bluetooth devices. You can change this later in Bluetooth settings.</string>
    <string name="volume_media_description">Music, video, games, &amp; other media</string>
    <string name="volume_ring_description">Ringtone &amp; notifications</string>
    <string name="volume_notification_description">Notifications</string>
    <string name="volume_alarm_description">Alarms</string>
    <string name="volume_ring_mute">Mute ringtone &amp; notifications</string>
    <string name="volume_media_mute">Mute music &amp; other media</string>
    <string name="volume_notification_mute">Mute notifications</string>
    <string name="volume_alarm_mute">Mute alarms</string>
    <string name="running_processes_header_title">Device memory</string>
    <string name="running_processes_header_footer">App RAM usage</string>
    <string name="running_processes_header_system_prefix">System</string>
    <string name="running_processes_header_apps_prefix">Apps</string>
    <string name="running_processes_header_free_prefix">Free</string>
    <string name="lock_screen_notifications_summary_show">Show all notification content</string>
    <string name="lock_screen_notifications_summary_hide">Hide sensitive notification content</string>
    <string name="lock_screen_notifications_summary_disable">Don\'t show notifications at all</string>
    <string name="lock_screen_notifications_interstitial_message">When your device is locked, how do you want notifications to show?</string>
    <string name="smsc_ok">OK</string>
    <string name="smsc_cancel">Cancel</string>
    <string name="smsc">smsc address</string>
</resources>