<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="fill_horizontal"
        android:id="@+id/smsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/smsc"
        android:scrollHorizontally="true"
        android:capitalize="none"
        android:autoText="false"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="true"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/smsc_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smsc_ok"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/smsc_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smsc_cancel"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>
