<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">
    <TextView
        android:textAppearance="@android:style/TextAppearance.Material.Body2"
        android:textColor="?android:attr/colorAccent"
        android:ellipsize="marquee"
        android:gravity="center"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:text="@string/running_processes_header_title"
        android:singleLine="true"
        android:textAlignment="viewStart"/>
    <view
        android:orientation="horizontal"
        android:id="@+id/color_bar"
        android:layout_width="match_parent"
        android:layout_height="16sp"
        class="com.android.settings.applications.LinearColorBar"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:layout_marginTop="8sp">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:src="@color/running_processes_system_ram"
            android:scaleType="centerInside"
            android:contentDescription="@null"/>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary"
                android:id="@+id/systemSizePrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/running_processes_header_system_prefix"
                android:maxLines="1"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="1px"
                android:src="@drawable/dotted_line_480px"
                android:scaleType="center"
                android:baselineAlignBottom="true"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"/>
            <TextView
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary"
                android:id="@+id/systemSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="32sp">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:src="@color/running_processes_apps_ram"
            android:scaleType="centerInside"
            android:contentDescription="@null"/>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary"
                android:id="@+id/appsSizePrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/running_processes_header_apps_prefix"
                android:maxLines="1"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="1px"
                android:src="@drawable/dotted_line_480px"
                android:scaleType="center"
                android:baselineAlignBottom="true"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"/>
            <TextView
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary"
                android:id="@+id/appsSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="32sp">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:src="@color/running_processes_free_ram"
            android:scaleType="centerInside"
            android:contentDescription="@null"/>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary"
                android:id="@+id/freeSizePrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/running_processes_header_free_prefix"
                android:maxLines="1"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="1px"
                android:src="@drawable/dotted_line_480px"
                android:scaleType="center"
                android:baselineAlignBottom="true"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"/>
            <TextView
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary"
                android:id="@+id/freeSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:textAppearance="@android:style/TextAppearance.Material.Body2"
        android:textColor="?android:attr/colorAccent"
        android:ellipsize="marquee"
        android:gravity="center"
        android:id="@+id/listHeader"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8sp"
        android:text="@string/running_processes_header_footer"
        android:singleLine="true"
        android:textAlignment="viewStart"/>
</LinearLayout>
